# process-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.py  pyproject.toml  setup.py  test.py  tox.ini
.github/actions/build-manylinux1/: Dockerfile  action.yml  entrypoint.py
.github/workflows/: ci-workflow.yml
cmake/: Cython.cmake
scripts/: build.sh  test.gdb
src/: CMakeLists.txt  preload.c  utils.c  utils.h
src/_src/: CMakeLists.txt  _process_tracker.pyx  plthook.c
src/_src/includes/: elf.pxd
src/_vendor/: CMakeLists.txt  plthook.pxd
src/_vendor/plthook/: link.txt
src/process_tracker/: CMakeLists.txt  __init__.py
src/process_tracker/_internal/: CMakeLists.txt  _process_tracker.pyx  preload.c  utils.c  utils.h  utils.pxd
src/process_tracker/_internal/includes/: link.pxd
src/process_tracker/_internal/support/: file_view.py
src/process_tracker/_lib/: __init__.py
src/process_tracker/_vendor/: CMakeLists.txt  plthook.cmake
tests/: test_basics.py  test_fileview.py
track_new/: __init__.py
